--- a/css/main.css
+++ b/css/main.css
@@ -84,3 +84,63 @@ section{
 .transform .b4:hover{
   transform: skew(45deg, 15deg) scale(.5) rotate(90deg);
 }
+/* -----------------------------------------
+            CSS Animation
+-------------------------------------------  */
+@keyframes changeColor{
+  from{
+    background-color: #CC80CC;
+  }
+  to{
+    background-color: #E89380;
+  }
+}
+.animation .b1{
+  animation-name: changeColor;
+  animation-duration: 2s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes moveAround{
+  0%{
+    transform: translate(0,0);
+  }
+  25%{
+    transform: translate(200px,0);
+  }
+  50%{
+    transform: translate(200px,200px);
+  }
+  75%{
+    transform: translate(0,200px);
+  }
+  100%{
+    transform: translate(0,0);
+  }
+}
+.animation .b2{
+  animation-name: moveAround;
+  animation-duration: 4s;
+  animation-delay: 2s;
+  animation-iteration-count: 3;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.62,-0.43,.24,1.4);
+}
+@keyframes transformMe{
+  0%{
+    transform: scale(0.5) rotateX(0) translateX(0);
+  }
+  100%{
+    transform: scale(1) rotateX(180deg) translateX(600px);
+  }
+}
+
+.animation .b3{
+  /* -name -duration -delay -fill-mode -iteration-count -direction -timing-function */
+  animation: transformMe 1.5s 1s forwards infinite alternate ease-in-out;
+}
+.animation .b4{
+  /* -name -duration -delay -fill-mode -iteration-count -direction -timing-function */
+  animation: transformMe 1.5s 1s forwards infinite alternate linear;
+}
